<resources>
    <string name="app_name">JSW Steel Partner App</string>
    <string name="partner_program">PARTNER PROGRAM</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_me">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="emergency_no">Emergency No.</string>
    <string name="dob">DOB</string>
    <string name="blood_group">Blood Group</string>
    <string name="taluka">Taluka</string>
    <string name="district">District</string>
    <string name="address">Address</string>
    <string name="area_assigned">Area Assigned</string>
    <string name="assigned_mng_id">Assigned Manager ID</string>
    <string name="assigned_mng_name">Assigned Manager Name</string>
    <string name="pincode">Pin code</string>
    <string name="submit">Submit</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="save">Save &amp; Update</string>
    <string name="sort_by_status">Sort By Status</string>
    <string name="transcatio_id">Transaction ID - </string>
    <string name="date_sample">22-Dec-2018</string>
    <string name="product">Product</string>
    <string name="size">Size -</string>
    <string name="quantity">Quantity -</string>
    <string name="unit">Unit -</string>
    <string name="amount">Amount -</string>
    <string name="retailer">Retailer -</string>
    <string name="status">Status -</string>
    <string name="party_time">Party Time</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="scheme_duration">Scheme Duration -</string>
    <string name="wining_criteria">Winning Criteria -</string>
    <string name="reward_won">Rewards to be Won -</string>
    <string name="event_name">Event Name -</string>
    <string name="add_new_product">ADD NEW PURCHASE</string>
    <string name="date_of_purchase">Date of Purchase -</string>
    <string name="enter_date_of_purchase">Enter Date of Purchase</string>
    <string name="product_name">Product Name -</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_new_retailer">Add New Retailer</string>
    <string name="add_product">Add Product</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_state">Choose State</string>
    <string name="write_to_us">Write to Us:</string>
    <string name="username">Sahil Goyal</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="purchase_verify">Purchase \nVerification</string>
    <string name="transcation_history">Transaction History</string>
    <string name="add_fabricator">Add \nFabricator</string>
    <string name="approve_fabricator">Approve \nFabricator</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile"> Profile\n</string>
    <string name="activity">Activity\n</string>
    <string name="search_partner">Search \n Partner</string>
    <string name="sale_enquiry">Sales Enquiry</string>
    <string name="sale_queries">Sales\n Queries</string>
    <string name="download_report">Download\n Report</string>
    <string name="home">Home</string>
    <string name="no_internet">No Internet Available</string>
    <string name="msg">Your details has been submitted successfully.\n  You will receive SMS and call upon registration</string>
    <string name="retailer_id">Retailer Id</string>
    <string name="tm_assinged_id">TM Assigned Id</string>
    <string name="tm_id">TM ID</string>
    <string name="tm_name">JSW Representative</string>
    <string name="name_">Name</string>
    <string name="tm_mobile">JSW Representative Mobile Number</string>
    <string name="mobile">Mobile Number</string>
    <string name="units">Units -</string>
    <string name="total_price">Total Price</string>
    <string name="no_sheets">No. of Sheets</string>
    <string name="enter_sheet">Enter No. of Sheets</string>
    <string name="choose_district">Choose District</string>
    <string name="name">Outlet Name</string>
    <string name="no_data_found">No Data Found</string>
    <string name="user_id">User Id</string>
    <string name="fabricator_nomination">Fabricator Nomination</string>
    <string name="sales_ver">Purchase Verification</string>
    <string name="view_detail">View Details</string>
    <string name="retailer_state">Retailer State</string>
    <string name="sort_by">Sort By</string>
    <string name="retailer_city">Retailer City</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="retailer_district">Retailer District</string>
    <string name="total_value">Total value in tons:</string>
    <string name="sheets">Sheets-</string>
    <string name="fabricator">Fabricator-</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="Remarks">Remarks-</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="approves">APPROVE</string>
    <string name="reject">REJECT</string>
    <string name="enter_size">Enter Size</string>
    <string name="enter_unit">Enter Unit</string>
    <string name="onhold">ON HOLD</string>
    <string name="distributor_id">Distributor Id</string>
    <string name="distributor_name">Distributor Name</string>
    <string name="outlet">Outlet Name</string>
    <string name="pending">PENDING</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="total_approved">Total Approved</string>
    <string name="total_pending">Total Pending</string>

    <string name="fabricatorId">Fabricator ID</string>
    <string name="fabricator_name">Fabricator Name</string>
    <string name="fabricator_no">Fabricator Number</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="id">ID</string>
    <string name="date">Date</string>
    <string-array name="tm_list">
        <item>ALL</item>
        <item>5 METRIC TONS </item>
        <item>7 DAYS ABOVE</item>

    </string-array>
    <string-array name="query_fliter">
        <item>All</item>
        <item>Pending</item>
        <item>Acknowledge</item>

    </string-array>
    <string-array name="approve_fliter">
        <item>ALL</item>
        <item>APPROVED</item>
        <item>PENDING</item>
        <item>ONHOLD</item>
        <item>REJECTED</item>

    </string-array>
</resources>
