<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ApproveFabricatorAcrivity">
    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/sort_by"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/white_solid_rectangle"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/last_name"
            android:entries="@array/query_fliter"
            android:minHeight="40dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorDarkGrey" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/white_solid_rectangle"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spSortBystatus"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/last_name"
            android:entries="@array/approve_fliter"
            android:minHeight="40dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorDarkGrey" />

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoDataFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data_found" />
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/rv_approveFabricator"
        tools:listitem="@layout/approve_fabricator_list_item"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>